--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "socket.io-client": "^4.5.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
+    "vue3-carousel": "^0.2.13",
     "vuex": "^4.0.2"
   },
   "devDependencies": {
