--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "axios": "^0.27.2",
     "element-plus": "^2.3.1",
     "sass": "^1.53.0",
     "socket.io-client": "^4.5.1",
+    "v-calendar": "^3.0.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
     "vue3-carousel": "^0.2.13",
