--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue": "^3.2.37",
     "vue-router": "^4.1.2",
     "vue3-carousel": "^0.2.13",
+    "vue3-google-map": "^0.15.0",
     "vuejs-datepicker": "^0.9.29",
     "vuex": "^4.0.2"
   },
