--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "@popperjs/core": "^2.11.7",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "element-plus": "^2.3.1",
     "sass": "^1.53.0",
     "socket.io-client": "^4.5.1",
     "v-calendar": "^3.0.1",
     "vue": "^3.2.37",
+    "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^5.2.0",
     "vue-router": "^4.1.2",
     "vue3-carousel": "^0.2.13",
     "vue3-google-map": "^0.15.0",
